--- a/src/style.css
+++ b/src/style.css
@@ -31,4 +31,18 @@
     background-color: hsl(var(--color-background));
     color: hsl(var(--color-foreground));
   }
+  input[type="color"] {
+    border: none;
+    outline: none;
+  }
+  input[type="color"]::-webkit-color-swatch-wrapper {
+    padding: 0;
+    border: none;
+  }
+  input[type="color"]::-webkit-color-swatch {
+    border: none;
+  }
+  input[type="color"]::-moz-color-swatch {
+    border: none;
+  }
 }
